--- a/src/app/pages/nosotros/certificaciones/certificaciones.component.html
+++ b/src/app/pages/nosotros/certificaciones/certificaciones.component.html
@@ -1,1 +1,109 @@
-<p>certificaciones works!</p>
+<app-header></app-header>
+
+
+
+
+<div class="breadcrumb-area breadcrumb-area-bg bg-img section-space--inner--bottom--50 section-space--inner--top--120"
+data-bg="fotossecciones/slide_ramedicas_1565823095.jpg">
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-lg-12">
+            <h2 class="breadcrumb-page-title breadcrumb-page-title--style2">Certificaciones</h2>
+        </div>
+        <div class="col-lg-12">
+            <ul class="breadcrumb-page-list breadcrumb-page-list--style2 text-uppercase">
+                <li class="has-children"><a href="../inicio.html">Inicio</a></li>
+                <li><a href="../nosotros.html">Nosotros</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
+<div class="page-content-wrapper section-space--inner--120"
+style="-moz-box-shadow:    inset  0  8px 8px -8px #696868,                             inset  0 -8px 8px -8px #696868;         -webkit-box-shadow: inset  0  8px 8px -8px #696868,                             inset  0 -8px 8px -8px #696868;          box-shadow:        inset  0  8px 8px -8px #696868,                             inset  0 -8px 8px -8px #696868;">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="service-details-page-content">
+                <div class="service-details-text-wrapper section-space--bottom--30">
+                    <h1 class="big-title">Certificaciones</h1>
+                </div>
+                <div class="service-details-image-block section-space--bottom--30"></div>
+                <div class="service-details-split-text section-space--bottom--60">
+                    <p><strong>Certificación ISO 45001:2018</strong></p>
+                    <p style="text-align:justify;">Luego de implementar el Sistema de Gestión de Seguridad y
+                        Salud en el Trabajo (SG-SST) , el ICONTEC valida la adecuación y conveniencia de la
+                        gestión que realizamos con nuestros procesos mediante auditoría realizada en el mes de
+                        Mayo de 2019 y otorga la certificación.</p>
+                    <p style="text-align:justify;"><a class="simple-button-plugin"
+                            href="../mediateca/Certificado-icontec.pdf"
+                            style="display:inline-block;background-color:rgb(255,151,0);border:1px solid rgb(255,151,0);padding:5px 10px;border-radius:5px;font-size:14px;cursor:pointer;color:rgb(255,255,255)!important;text-decoration:none!important;"
+                            target="_blank">Descargar certificado</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="page-sidebar">
+                <div class="single-sidebar-widget">
+                    <h2 class="widget-title">Nosotros</h2>
+                    <ul class="sidebar-category">
+                        <li class=""><a href="quienes-somos.html" style=""><i
+                                    class="fa fa-chevron-right style-right"></i>Quienes somos</a></li>
+                        <li class=""><a href="valores-corporativos.html" style=""><i
+                                    class="fa fa-chevron-right style-right"></i>Valores Corporativos</a></li>
+                        <li class=""><a href="mision-y-vision.html" style=""><i
+                                    class="fa fa-chevron-right style-right"></i>Misión y visión</a></li>
+                        <li class=""><a href="politicas.html" style=""><i
+                                    class="fa fa-chevron-right style-right"></i>Políticas</a></li>
+                        <li class="active"><a href="certificaciones.html" style=""><i
+                                    class="fa fa-chevron-right style-right"></i>Certificaciones</a></li>
+                        <li class=""><a href="politica-de-tratamiento-de-datos.html" style=""><i
+                                    class="fa fa-chevron-right style-right"></i>Política de tratamiento de
+                                datos</a></li>
+                    </ul>
+                </div>
+                <div class="single-sidebar-widget">
+                    <h2 class="widget-title">Unidades de negocio</h2>
+                    <div class="sidebar-case-study-list">
+                        <div class="single-sidebar-case-study">
+                            <div class="single-sidebar-case-study__image"><a
+                                    href="../unidades-de-negocio/comercializacion.html"><img
+                                        src="../fotospages/mic_comercializacion_1572550762.jpg"
+                                        class="img-fluid" alt="Comercialización"></a></div>
+                            <div class="single-sidebar-case-study__content">
+                                <h3 class="title"><a
+                                        href="../unidades-de-negocio/comercializacion.html">Comercialización</a>
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="single-sidebar-case-study">
+                            <div class="single-sidebar-case-study__image"><a
+                                    href="../unidades-de-negocio/hospitalaria.html"><img
+                                        src="../fotospages/mic_hospitalaria_1572553256.jpg" class="img-fluid"
+                                        alt="Hospitalaria"></a></div>
+                            <div class="single-sidebar-case-study__content">
+                                <h3 class="title"><a
+                                        href="../unidades-de-negocio/hospitalaria.html">Hospitalaria</a></h3>
+                            </div>
+                        </div>
+                        <div class="single-sidebar-case-study">
+                            <div class="single-sidebar-case-study__image"><a
+                                    href="../unidades-de-negocio/dispensacion.html"><img
+                                        src="../fotospages/mic_dispensacion_1572553334.jpg" class="img-fluid"
+                                        alt="Dispensación"></a></div>
+                            <div class="single-sidebar-case-study__content">
+                                <h3 class="title"><a
+                                        href="../unidades-de-negocio/dispensacion.html">Dispensación</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-sidebar-widget">
+                    <h2 class="widget-title"></h2>
+                    <ul class="sidebar-download-items"></ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
